Issue #22557: Now importing already imported modules is up to 2.5 times faster.