Include/pystate.h
@@ -41,6 +41,7 @@ typedef struct _is {
 #endif
 
     PyObject *builtins_copy;
+    PyObject *import_func;
 } PyInterpreterState;
 #endif
 
